--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -381,7 +381,7 @@ width:100%!important;
 background-color:#000;
 height:50px;
 
-top:40px;
+top:0px;
 z-index:300;
 position:absolute;
 }
@@ -419,7 +419,7 @@ font-family: 'Jockey One', sans-serif;
 
 
 
-.header_nav_3 a
+.header_nav_3 a, .header_nav_3 li
 {
 color:#29ABE2;
 text-decoration:none;
@@ -993,14 +993,13 @@ margin-top:20px;
 
 .graphists_button_top
 {
-
 background-image:url(../pics/pattern/pat-bg.png);
 background-repeat:repeat;
-background-color:#f2f2f2;
+background-color:#000;
 position:relative;
 float:right;
 padding:2px 3px 2px 2px ;
-margin-top:20px;
+margin-top:23px;
 margin-right:5px;
 }
 
@@ -1029,7 +1028,7 @@ margin-right:5px;
 
 background-image:url(../pics/pattern/pat-foot.png);
 background-repeat:repeat;
-background-color:#000;
+background-color:#f2f2f2;
 }
 
 
