--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -491,7 +491,7 @@ margin-bottom:0px;
 border-right:1px solid #28abe3;
 height:116px;
 margin-top:100px;
-display: none;}
+display: none;gggii}
 
 .header_news_2 a
 {
