premiere integration _thib

--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1196,8 +1196,10 @@ border:none}
 .open_releases_reviews li a
 {
   display:inline;
-  background-color:#E6E6E6;
-  color:#333333;
+  background-color:transparent;
+  color:#29ABE2;
+  border-radius: 4px;
+  border:1px solid #29ABE2;
   padding-bottom:5px;
   padding-left:5px;
   padding-right:5px;
@@ -1208,7 +1210,7 @@ border:none}
 
 .open_releases_reviews li a:hover
 {
-background-color:#000;
+background-color:#29ABE2;
 color:#FFF;
 }
 .open_releases_infos
@@ -1279,7 +1281,8 @@ font-size:1.3rem;
 
 .open_releases_download_licence a
 {
-  color:#000;
+  color:#29ABE2;
+  font-weight: bold;
   text-decoration:none;
 }
 
@@ -1412,7 +1415,8 @@ list-style: none;
 .open_releases li a
 {
 text-decoration:none;
-color:#000;
+color:#29ABE2;
+font-weight: bold;
 }
 
 .open_releases_playlist_button, .open_releases_videos_button
@@ -1521,9 +1525,11 @@ text-align:right;}
 }
 .open_releases_buy
 {
-  background-color:#1a1a1a;
-  color:#FFF;
-  font-weight:bold;
+  background-color:#transparent;
+  color:#29ABE2;
+  border-radius: 4px;
+  border:1px solid #29ABE2;
+  font-weight: bold;
   padding:5px;
   min-height:20px;
   margin-top:-12px;
@@ -1535,6 +1541,7 @@ text-align:right;}
 .open_releases_buy:hover
 {
   background-color: #29ABE2;
+  color:#FFF;
 }
 .open_releases_buy img
 {
@@ -1574,14 +1581,17 @@ font-family: 'Open Sans', sans-serif;
 
   .open_releases_download a
   {
-    background-color:#e6e6e6;
+    background-color:transparent;
+    border: 1px solid #29ABE2;
+    border-radius: 4px;
+    font-weight: bold;
     padding:7px;
 
 
   }
   .open_releases_download a:hover
   {
-    background-color:#000;
+    background-color:#29ABE2;
     color:#FFF;
   }
 
@@ -1849,3 +1859,14 @@ input.button:hover
 }
 
 input.button:focus {outline: none;}
+
+.donateinfos
+{
+  margin-left: 10px;
+  opacity: 0.04;
+  border-radius: 4px;
+  background-color: #ea1d79;
+}
+
+
+
