--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1335,6 +1335,7 @@ color:#b2b2b2;
 font-size:33px;
 font-size:3.3rem;
 margin-top:-36px;
+margin-bottom: -0.5em;
 }
 .open_releases_videos {
   margin-left: 17px;
@@ -1437,7 +1438,8 @@ line-height:17px;
 {
 color:#666;
 margin-left:10px;
-margin-top:-10px;
+margin-top:14px;
+margin-bottom: -25px;
 padding-bottom:0px;
 line-height:17px;
 text-align: justify;
@@ -1458,9 +1460,10 @@ opacity: 1;
 
 ul.open_releases_button, ul.open_artists_button
 {
-margin-top:-40px;
+margin-top: -65px;
 margin-bottom:0px;
-text-align:right;}
+text-align:right;
+}
 
 .open_releases_button li, .open_artists_button li
 {
@@ -1521,15 +1524,15 @@ text-align:right;}
 }
 .open_releases_buy
 {
-  background-color:#1a1a1a;
+  background-color:#333;
   color:#FFF;
   font-weight:bold;
   padding:5px;
   min-height:20px;
-  margin-top:-12px;
+  margin-top:3em;
   font-size:12px;
   font-size:1.2rem;
-  width:471px;
+  width:441px;
 }
 
 .open_releases_buy:hover
