--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1529,10 +1529,10 @@ text-align:right;
   font-weight:bold;
   padding:5px;
   min-height:20px;
-  margin-top:3em;
+  margin-bottom:0.1em;
   font-size:12px;
   font-size:1.2rem;
-  width:441px;
+  width:442px;
 }
 
 .open_releases_buy:hover
@@ -1563,7 +1563,7 @@ text-align:right;
 
 ul.open_releases_download
 {
-  margin:-10px 0px 10px 2px;
+  margin:1em 0px 2em 2px;
 }
 
 .open_releases_download li
