--- a/src/web/frontend/css/radio.css
+++ b/src/web/frontend/css/radio.css
@@ -3,7 +3,7 @@ body {
 	color:#FFF;
 }
 
-p {color:#b2b2b2;font-size:1.5em!important}
+p, li {color:#b2b2b2;font-size:1.5em!important}
 p a {
 	font-size:1em!important;
 	}
