--- a/src/web/frontend/css/radio.css
+++ b/src/web/frontend/css/radio.css
@@ -4,6 +4,7 @@ body {
 	background-image:url(../pics/radio/flyer_8_may.png);
 	background-position: right;
 	background-repeat: no-repeat;
+	background-size: auto;
 }
 
 p, li {color:#b2b2b2;font-size:1.5em!important}
