--- a/src/web/frontend/css/radio.css
+++ b/src/web/frontend/css/radio.css
@@ -2,9 +2,9 @@ body {
 	background-color: #000;
 	color:#FFF;
 	background-image:url(../pics/radio/flyer_8_may.png);
-	background-position: right;
+	background-position: 65%;
 	background-repeat: no-repeat;
-	background-size: auto;
+	background-size: contain;
 }
 
 p, li {color:#b2b2b2;font-size:1.5em!important}
