--- a/src/web/frontend/css/radio.css
+++ b/src/web/frontend/css/radio.css
@@ -15,3 +15,31 @@ p a {
 a {color:#0099FF!important;}
 
 .header_nav_3 {background-color: transparent!important}
+
+
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+
+          body {
+        background-image: none;
+    }
+
+}
+
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+
+          body {
+        background-image: none;
+    }
+
+}
+
+/* Portrait phones and smaller */
+@media (max-width: 480px) {
+
+          body {
+        background-image: none;
+    }
+
+}
