--- a/src/web/frontend/css/radio.css
+++ b/src/web/frontend/css/radio.css
@@ -14,7 +14,7 @@ p a {
 
 a {color:#0099FF!important;}
 
-.header_nav_3 {background-color: transparent!important}
+.header_nav_3 ul  {background-color: transparent!important}
 
 
 /* Portrait tablets and small desktops */
