--- a/src/web/frontend/css/radio.css
+++ b/src/web/frontend/css/radio.css
@@ -2,7 +2,7 @@ body {
 	background-color: #000;
 	color:#FFF;
 	background-image:url(../pics/radio/flyer_8_may.png);
-	background-position: 70%;
+	background-position: right;
 	background-repeat: no-repeat;
 	background-size: contain;
 }
