--- a/src/web/frontend/css/radio.css
+++ b/src/web/frontend/css/radio.css
@@ -5,7 +5,7 @@ body {
 	background-position: right;
 	background-repeat: no-repeat;
 	background-size: contain;
-	margin-left: 5%
+	padding-left: 1%
 }
 
 p, li {color:#b2b2b2;font-size:1.5em!important}
