--- a/src/web/frontend/css/radio.css
+++ b/src/web/frontend/css/radio.css
@@ -11,9 +11,10 @@ body {
 p, li {color:#b2b2b2;font-size:1.5em!important}
 p a {
 	font-size:1em!important;
+	text-decoration: none;
 	}
 
-a {color:#0099FF!important;}
+a {color:#0099FF!important;text-decoration: none;}
 
 .header_nav_3 ul {background-color: transparent!important}
 
