--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1045,6 +1045,8 @@ background-repeat:repeat;
 background-color:#000;
 padding:70px 0px 60px 0px;
 top:-28px;
+font-size: 15px,
+font-size: 1.5 rem;
 
 }
 
