--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -925,6 +925,7 @@ background-repeat:repeat;
 background-color:#f2f2f2;
 padding:70px 0px 60px 0px;
 top:-22px;
+display: none;
 }
 
 
@@ -1032,6 +1033,7 @@ margin-right:5px;
 background-image:url(../pics/pattern/pat-foot.png);
 background-repeat:repeat;
 background-color:#f2f2f2;
+display: none;
 }
 
 
@@ -1104,6 +1106,7 @@ opacity:0.7;
 .footer p
 {
 color:#b2b2b2;
+font-size: 3rem;
 }
 
 .footer_content p a
@@ -1738,6 +1741,7 @@ color:#FFF;
    margin-top:-70px!important;
    padding-bottom:12px;
    margin-left:5px;
+   display: none;
  }
 
 
