--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1107,6 +1107,8 @@ opacity:0.7;
 {
 color:#b2b2b2;
 font-size: 3rem;
+font-weight: bold;
+font-family: 'Jockey One', sans-serif;
 }
 
 .footer_content p a
