--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1072,7 +1072,9 @@ font-size:20px;
 font-size:2rem;
 }
 
-.documentaryembed {float: left;}
+.documentaryembed {    margin: -36% 0%;
+  float: right;
+}}
 .footer_content h2
 {
 color:#FFF;
