--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1073,9 +1073,7 @@ font-size:20px;
 font-size:2rem;
 }
 
-.documentaryembed {    margin: -36% 0%;
-  float: right;
-}}
+.documentaryembed {    margin: -36% 0%;   float: right;}
 .footer_content h2
 {
 color:#FFF;
@@ -1407,7 +1405,6 @@ margin-right:30px;
 {
 margin-top:-25px!important;
 margin-left:-4px;
-
 }
 
 
@@ -1819,7 +1816,7 @@ opacity:1;
 
 /* mailing list */
 
-#mc_embed_signup {background-color: #transparent;}
+#mc_embed_signup {background-color: transparent;}
 
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
