--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -424,7 +424,7 @@ font-family: 'Jockey One', sans-serif;
 
 .header_nav_3 a, .header_nav_3 li
 {
-color:#29ABE2;
+color: #fff;;
 text-decoration:none;
 text-transform:uppercase;
 font-size:33px;
