--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -433,7 +433,7 @@ letter-spacing: 1px;
 
 }
 
-.donation {color:#ea1D78;text-transform: uppercase;font-weight: bold;}
+.donation, .donation a {color:#ea1D78;text-transform: uppercase;font-weight: bold;}
 
 .header_nav_3 a:hover
 {
