--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -433,7 +433,7 @@ letter-spacing: 1px;
 
 }
 
-.donation, .donation a {color:#ea1D78!important;font-weight: bold!important;}
+.donation, .donation a {color:#ea1D78!important;font-weight: bold!important;font-size: 3rem;}
 
 .header_nav_3 a:hover
 {
@@ -1053,7 +1053,8 @@ padding:70px 0px 60px 0px;
 top:-28px;
 font-size: 20px;
 font-size:2rem;
-
+font-family: 'Jockey One', sans-serif;
+text-transform: lowercase;
 }
 
 .footer_content p  {color:#FFF;}
@@ -1109,14 +1110,14 @@ opacity:0.7;
 {color:#29ABE2;opacity:1;}
 .footer p
 {
-color:#b2b2b2;
-font-size: 2rem;
+color:#29ABE2;
+font-size: 2.2rem;
 font-weight: bold;
 }
 
 .footer_content p a
 {
-color:#29ABE2;
+color:#FFF;
 text-decoration:none;
 opacity:0.7;
 font-weight: normal;
