--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -433,7 +433,7 @@ letter-spacing: 1px;
 
 }
 
-.donation, .donation a {color:#ea1D78!important;font-weight: bold!important;}
+.donation, .donation a {color:#fff!important;font-weight: bold!important;}
 
 .header_nav_3 a:hover
 {
