--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -429,7 +429,7 @@ font-family: 'Jockey One', sans-serif;
 color: #fff;;
 text-decoration:none;
 text-transform:uppercase;
-font: size 3.7em;px;
+font-size : 37px;
 font-size:3.7 rem;
 letter-spacing: 1px;
 
