--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -596,7 +596,7 @@ margin:10px;
 {
 color:#FFF;
 margin:0px 10px 0px 10px;
-padding:0px 10px 0px 10px;
+padding:0px ds10px 0px 10px;
 font-size:12px;
 font-size:1.2rem;
 text-align:left;
