--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -86,16 +86,19 @@ font-weight:lighter;
 background-repeat:repeat;
 display:inline;
 text-transform:uppercase;
-font-size:27px;
-font-size:2.7rem;
-height:30px;
-padding:5px 0px 10px 10px;
-margin-top:10px;
+font-size:37px;
+font-size:3.7rem;
+height:80px;
 margin-left:-5px;
 background-image:url(../pics/pattern/pat-bg.png);
 background-repeat:repeat;
 background-color:#f2f2f2;
 color:#000;
+position: absolute;
+text-align: right;
+padding-top: 30
+px
+;
 }
 
 /* CALQUES
