--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -95,6 +95,7 @@ margin-right: auto;
   position: absolute;
   text-align: right;
   padding-top: 30 px;
+}
 
 /* CALQUES
 ***************************************************************/
