--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -629,7 +629,7 @@ margin:10px;
 background-image:url(../pics/pattern/pat-bg.png);
 background-repeat:repeat;
 background-color:#000;
-padding:70px 0px 90px 0px;
+padding:20px 0px 90px 0px;
 top:-2px;
 }
 
@@ -789,6 +789,7 @@ background-color:#29ABE2;
   font-size: 37px;
   font-size: 3.7 rem;
   letter-spacing: 1px;
+  display: none;
 }
 
 .artists_listing_all {top:-14px;}
@@ -797,7 +798,6 @@ background-color:#29ABE2;
 background-image:url(../pics/pattern/pat-bg.png);
 background-repeat:repeat;
 background-color:#f2f2f2;
-padding:70px 0px 120px 0px;
 }
 .artwork_artist {
   background-color: #000;
