--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -379,15 +379,14 @@ font-size:0.9rem;
 
 .header_nav_3
 {
-width:100%!important;
-background-color:#000;
-height:80px;
-
-top:680px;
-z-index:300;
-position:absolute;
-text-align: right;
-padding-top: 30px;
+  width: 100%!important;
+  background-color: #000;
+  height: 80px;
+  top: 635 px;
+  z-index: 300;
+  position: absolute;
+  text-align: right;
+  padding-top: 30px;
 }
 
 
@@ -813,9 +812,20 @@ background-color:#f2f2f2;
 }
 .open_releases,.open_artists
 {
-top:30px;
-border-top:10px solid #000;
-background-color:#FFF;}
+    width: 100%!important;
+    background-color: #000;
+    height: 80
+px
+;
+    top: 635
+px
+;
+    z-index: 300;
+    position: absolute;
+    text-align: right;
+    padding-top: 30
+px
+;background-color:#FFF;}
 
 .artists_pictures
 {
@@ -1328,7 +1338,6 @@ h2.open_releases_artist
 font-size:33px;
 font-size:3.3rem;
 color:#b2b2b2;
-margin-top:-30px;
 }
 
 h2.open_releases_artist a
