--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -628,8 +628,7 @@ margin:10px;
 background-image:url(../pics/pattern/pat-bg.png);
 background-repeat:repeat;
 background-color:#000;
-padding:20px 0px 90px 0px;
-top:-2px;
+padding:30px;
 }
 
 
@@ -791,25 +790,21 @@ background-color:#29ABE2;
   display: none;
 }
 
-.artists_listing_all {top:-14px;}
 .artists_listing_all,.open_releases,.open_artists
 {
 background-image:url(../pics/pattern/pat-bg.png);
 background-repeat:repeat;
 background-color:#f2f2f2;
+padding: 30px;
 }
 .artwork_artist {
   background-color: #000;
   top:0px;
-  padding:60px 0px 150px 0px;
-   margin-top: -14px;
 }
  .artwork_artists_listing_all {
    background-color: transparent;
-   margin-top: -60px;
-   padding-bottom: 2px;
-   padding-left: 5px;
-}
+   padding: 30px  ;  
+
 .open_releases,.open_artists
 {
     width: 100%!important;
