--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -619,7 +619,7 @@ margin:10px;
 background-image:url(../pics/pattern/pat-bg.png);
 background-repeat:repeat;
 background-color:#000;
-padding:30px;
+padding:60px 0PX 60PX 0PX;
 }
 
 
@@ -786,6 +786,7 @@ background-color:#29ABE2;
 background-image:url(../pics/pattern/pat-bg.png);
 background-repeat:repeat;
 background-color:#f2f2f2;
+padding : 30PX 0PX 30PX 0PX;
 }
 .artwork_artist {
   background-color: #000;
@@ -1301,9 +1302,13 @@ margin-top:10px;
 
 h2.open_releases_artist
 {
-font-size:33px;
-font-size:3.3rem;
+font-size:37px;
+font-size:3.7rem;
 color:#b2b2b2;
+margin-top: 100
+px
+;
+}
 }
 
 h2.open_releases_artist a
