--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1305,10 +1305,7 @@ h2.open_releases_artist
 font-size:37px;
 font-size:3.7rem;
 color:#b2b2b2;
-margin-top: 100
-px
-;
-}
+margin-top: 100px;
 }
 
 h2.open_releases_artist a
