--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1428,7 +1428,8 @@ line-height:17px;
 }*/
 .open_releases_press_text
 {
-color:#666;
+color:#000;
+font-size: 1.5rem;
 margin-left:10px;
 margin-top:13px;
 padding-bottom:0px;
