--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -14,7 +14,7 @@ margin-right: auto;
 .header_nav_3_content_logo img
 {
   margin-top:-1px;
-}
+}sku
 
 body
 {
@@ -1860,3 +1860,5 @@ input.button:focus {outline: none;}
 {background-color: #000;}
 
 .writers {text-align: right;font-size: 1rem;}
+.sku {color:#28ABE3}
+.date_release {font-size: 2rem;font-style: italic;}
