--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1860,5 +1860,5 @@ input.button:focus {outline: none;}
 {background-color: #000;}
 
 .writers {text-align: right;font-size: 1rem;}
-.sku {color:#28ABE3}
+.sku {color:#0099FF}
 .date_release {font-size: 2rem;font-style: italic;}
