--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1298,10 +1298,10 @@ margin-top:10px;
 
 h2.open_releases_artist
 {
-font-size:37px;
-font-size:3.7rem;
-color:#b2b2b2;
-margin-top: 80px;
+  font-size: 37px;
+  font-size: 6rem;
+  color: #000;
+  margin-top: 80px;
 }
 
 h2.open_releases_artist a
@@ -1860,5 +1860,8 @@ input.button:focus {outline: none;}
 {background-color: #000;}
 
 .writers {text-align: right;font-size: 1rem;}
-.sku {color:#0099FF}
-.date_release {font-size: 2rem;font-style: italic;}
+.sku, .daterelease {    color: #FFF;
+  padding: 10px;
+  font-size: 3rem;
+  text-transform: lowercase;
+  font-style: none;}
