--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1257,7 +1257,6 @@ margin-left:10px;
 {
 color:#666;
 text-decoration:none;
-margin-left:10px;
 margin-top:0px;
 margin-bottom:25px;
 font-size:13px;
@@ -1376,7 +1375,7 @@ color:#FFF!important;
 
 .open_releases_artwork
 {
-margin-right:30px;
+margin:10px 30px 0px 0px;
 
 }
 
@@ -1428,6 +1427,8 @@ line-height:17px;
   padding-bottom: 0px;
   font-size: 1.7rem;
   line-height: 28px;
+  text-align: justify;
+  padding-top: 10px;
 }
 
 .open_artists_bio
@@ -1454,7 +1455,7 @@ opacity: 1;
 
 ul.open_releases_button, ul.open_artists_button
 {
-margin-top: -65px;
+margin-top: -85px;
 margin-bottom:0px;
 text-align:right;
 }
@@ -1519,7 +1520,6 @@ text-align:right;
   .open_releases_buy
   {
     color: #000;
-    margin-top: -8px;
     margin-left: 0px;
     background-color: #0099FF;
     min-height: 20px;
@@ -1864,7 +1864,7 @@ input.button:focus {outline: none;}
   padding: 0;
   top: 35px;
   bottom: 0;
-  left: 1px;
+  left: 3px;
   position: absolute;
   width: 200px;
   font-size: 2rem;
