--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1297,8 +1297,8 @@ margin-top:10px;
 
 h2.open_releases_artist
 {
-  font-size: 60px;
-  font-size: 6rem;
+  font-size: 35px;
+  font-size: 3.5rem;
   color: #000;
   margin-top: 80px;
 }
@@ -1872,4 +1872,4 @@ input.button:focus {outline: none;}
   font-style: none;}
 
 
-  .review {background-color: #FFF;color:#000;font-size: 2rem;padding:5px;}
+  .reviews {background-color: #FFF;color:#000;font-size: 2rem;padding:5px;}
