--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1879,8 +1879,11 @@ input.button:focus {outline: none;}
     background-color: #FFF;
     color: #000;
     font-size: 2rem;
-    padding: 10px;
-    margin: 5px;
+    padding: -4px;
+    margin: 20px;
+    display: unset;
+    margin-left: -0px;
+    margin-top: -20px;
 }
 
 .reviews a {color:#000; text-transform: uppercase;text-decoration: none;font-size: 1.7rem;}
