--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1255,12 +1255,14 @@ margin-left:10px;
 
 .open_releases_download_licence
 {
-color:#666;
-text-decoration:none;
-margin-top:0px;
-margin-bottom:25px;
-font-size:13px;
-font-size:1.3rem;
+  color: #000;
+  text-decoration: none;
+  margin-top: 0px;
+  margin-bottom: 25px;
+  font-size: 13px;
+  font-size: 1.9rem;
+  font-family: 'Jockey One', sans-serif;
+  font-weight: normal;
 
 }
 
@@ -1558,11 +1560,11 @@ text-align:right;
 .open_releases_buy a
 {
     color: #0099FF;
+    color: #0099FF;
     text-decoration: none;
     font-weight: lighter;
     font-size: 2rem;
     color: #FFF;
-    padding: 5px;
 }
 
 
