--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1882,7 +1882,7 @@ input.button:focus {outline: none;}
 }
 
 
-  .reviews, .licence  {
+  .reviews {
     background-color: #FFF;
     color: #000;
     font-size: 2rem;
@@ -1893,4 +1893,16 @@ input.button:focus {outline: none;}
     margin-top: -20px;
 }
 
-.reviews a, .licence a {color:#000; text-transform: uppercase;text-decoration: none;font-size: 1.7rem;}
+.licence  {
+  background-color: #FFF;
+  color: #000;
+  font-size: 2rem;
+  padding: -4px;
+  margin: 20px;
+  display: unset;
+  margin-left: -0px;
+  margin-top: -20px;
+  padding:10px;
+}
+.reviews a{color:#000; text-transform: uppercase;text-decoration: none;font-size: 1.7rem;}
+.licence a {color:#000; text-transform: uppercase;text-decoration: none;font-size: 1.7rem;}
