--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1861,12 +1861,21 @@ input.button:focus {outline: none;}
 #radio 
 {background-color: #000;}
 
-.writers, .open_releases_download_licence {  
-    text-align: right;
-  font-size: 1.5rem;
-  padding: 10px;
-  float: right;
-  font-style: italic;}
+.writers
+{  
+  text-align: right;
+font-size: 1.5rem;
+padding: 10px;
+float: right;
+font-style: italic;}
+
+.open_releases_download_licence {  
+font-size: 1.5rem;
+padding: 10px;
+}
+
+.open_releases_download_licence
+{color:#000;text-decoration: none;}
 .sku, .date_release {      
 
   color: #0099FF;
