--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1874,7 +1874,7 @@ font-size: 1.5rem;
 padding: 10px;
 }
 
-.open_releases_download_licence
+.open_releases_download_licence a
 {color:#000;text-decoration: none;}
 .sku, .date_release {      
 
