--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1660,8 +1660,7 @@ color:#000;
 font-size:25px;
 font-size:2.5em;
 margin-left: 10px;
-padding: 20px  0px  0px  0px;
-}
+margin-top:80px;}
 
 .open_artists_pictures
 {
