--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1890,13 +1890,13 @@ font-size: 1.5rem;
   .reviews {
     background-color: #FFF;
     color: #000;
-    font-size: 2rem;
-    padding: -4px;
-    margin: 20px;
-    display: unset;
-    margin-left: -0px;
-    margin-top: -20px;
-}
+    font-size: 1.5rem;
+    padding: 5px;
+    margin: 5px;
+    /* margin-top: 0px; */
+    float: left;
+    display: inline-flex;
+  }
 
 
 .reviews a{color:#000; text-transform: uppercase;text-decoration: none;font-size: 1.7rem;}
