--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1661,7 +1661,10 @@ color:#000;
 font-size:25px;
 font-size:2.5em;
 margin-left: 10px;
-margin-top:80px;}
+margin-top:80px;
+margin-bottom:80px;
+
+}
 
 .open_artists_pictures
 {
