--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1892,7 +1892,7 @@ font-size: 1.5rem;
 }
 
 
-  .reviews {
+  .reviews, .open_artists_bio {
     background-color: #FFF;
     color: #000;
     font-size: 1.5rem;
