--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1303,6 +1303,7 @@ h2.open_releases_artist
   font-size: 4rem;
   color: #000;
   margin-top: 80px;
+  margin-bottom:80px; 
 }
 
 h2.open_releases_artist a
