--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1661,7 +1661,7 @@ h1.open_artists_name
 color:#000;
 font-size:25px;
 font-size:2.5em;
-margin-left: 10px;
+/* margin-left: 10px; */
 margin-top:80px;
 margin-bottom:80px;
 
@@ -1678,7 +1678,7 @@ margin-right:30px;
 width:220px;
 background-color:#000;
 padding-bottom:0px;
-margin:10px 10px 10px 10px;
+margin:10px 10px 10px 0px;
 float:left!important;
 }
 .open_artists_listing_releases_container{width: 600px; height: 500px;}
