--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -791,9 +791,7 @@ padding : 30PX 0PX 30PX 0PX;
 .artwork_artist {
   background-color: #000;
   top:0px;
-  padding-bottom: 30px
-px
-;
+  padding-bottom: 30px;
 }
  .artwork_artists_listing_all {
    background-color: #000;
@@ -1044,6 +1042,7 @@ display: none;
   text-transform: lowercase;
   font-weight: lighter;
   letter-spacing: 1px;
+  padding: 80px 0px 80px 0px;
 }
 
 
@@ -1430,7 +1429,6 @@ line-height:17px;
   font-size: 1.6rem;
   line-height: 28px;
   text-align: justify;
-  padding-top: 30px;
 }
 
 .open_artists_bio
